fix layout issue

--- a/src/components/layout/home.css
+++ b/src/components/layout/home.css
@@ -4,7 +4,7 @@
 }
 
 .collection-card{ 
-    background-color: white;
+    background-color: white !important;
     padding: 10px;
     font-size: 12px;
 }
